spline #1428 Upgrade to Java 21 (backport from #1417)