@@ -68,42 +68,32 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
+                <version>3.5.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>za.co.absa.utils</groupId>
+                        <artifactId>rest-api-doc-generator_${scala.compat.version}</artifactId>
+                        <version>1.1.2</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <includePluginDependencies>true</includePluginDependencies>
+                    <executable>java</executable>
+                    <arguments combine.children="append">
+                        <argument>--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>za.co.absa.rapidgen.RapidGenCLI</argument>
+                    </arguments>
+                </configuration>
                 <executions>
                     <execution>
                         <id>gen-swagger-consumer-json</id>
                         <phase>process-classes</phase>
                         <goals>
-                            <goal>java</goal>
+                            <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <includePluginDependencies>true</includePluginDependencies>
-                            <executableDependency>
-                                <groupId>za.co.absa.utils</groupId>
-                                <artifactId>rest-api-doc-generator</artifactId>
-                            </executableDependency>
-                            <mainClass>za.co.absa.rapidgen.RapidGenCLI</mainClass>
-                            <arguments>
-                                <argument>swagger</argument>
-                                <argument>-o</argument>
-                                <argument>${swagger.docs.path}/consumer.swagger.json</argument>
-                                <argument>za.co.absa.spline.consumer.rest.ConsumerRESTConfig</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>gen-swagger-producer-json</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <includePluginDependencies>true</includePluginDependencies>
-                            <executableDependency>
-                                <groupId>za.co.absa.utils</groupId>
-                                <artifactId>rest-api-doc-generator</artifactId>
-                            </executableDependency>
-                            <mainClass>za.co.absa.rapidgen.RapidGenCLI</mainClass>
                             <arguments>
                                 <argument>swagger</argument>
                                 <argument>-o</argument>
@@ -112,14 +102,22 @@
                             </arguments>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>gen-swagger-producer-json</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>
+                                <argument>swagger</argument>
+                                <argument>-o</argument>
+                                <argument>${swagger.docs.path}/consumer.swagger.json</argument>
+                                <argument>za.co.absa.spline.consumer.rest.ConsumerRESTConfig</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
                 </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>za.co.absa.utils</groupId>
-                        <artifactId>rest-api-doc-generator</artifactId>
-                        <version>1.0.4</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
